--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   assets:
     - images/bg_01.png
     - images/bg_02.png
+    - images/cuba.png
     - assets/animation/
 
   # An image asset can refer to one or more resolution-specific "variants", see
