--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   lottie: ^2.6.0
   flutter_cache_manager: ^3.3.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
