--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   lottie: ^2.6.0
   flutter_cache_manager: ^3.3.1
   intl: ^0.18.1
+  icons_plus: ^4.0.0
 
 dev_dependencies:
   flutter_test:
