--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  lottie: ^2.6.0
   flutter_cache_manager: ^3.3.1
   intl: ^0.18.1
   icons_plus: ^4.0.0
   font_awesome_flutter: ^10.5.0
+  animated_splash_screen: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -71,7 +72,8 @@ flutter:
     - images/miami1.png
     - images/miami2.png
     - images/miami3.png
-    - assets/animation/
+    - images/logoW.png
+    - images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
