Refatoração de telas e do fluxo do app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.18.1
   icons_plus: ^4.0.0
   font_awesome_flutter: ^10.5.0
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +72,7 @@ flutter:
     - images/miami1.png
     - images/miami2.png
     - images/miami3.png
+    - images/check-circle.svg
     - assets/animation/
 
   # An image asset can refer to one or more resolution-specific "variants", see
