--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_auth: ^4.12.1
   cloud_firestore: ^4.12.2
   firebase_database: ^10.3.3
+  provider: ^6.1.1
 
 
 dev_dependencies:
