--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   firebase_auth: ^4.12.1
   cloud_firestore: ^4.12.2
   firebase_database: ^10.3.3
+  supabase: ^1.11.11
+  supabase_flutter: ^1.10.25
+  http: ^1.1.0
 
 
 dev_dependencies:
